[package]
name = "generic_dungen"
version = "0.1.0"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_dungen_structs = { path = "../generic_dungen_structs" }
generic_dungen_traits = { path = "../generic_dungen_traits" }