[package]
name = "dungen_minion"
version = "0.2.1"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A dungeon generator focused on 2D roguelikes."
homepage = "https://github.com/MouseProducedGames/dungen_minion"
repository = "https://github.com/MouseProducedGames/dungen_minion"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungen_minion_rooms = "0.2.1"
rand = "0.7.3"
